--- a/app/src/main/assets/html.html
+++ b/app/src/main/assets/html.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="loading">
-    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="360px" height="460px"
+    <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="100%" height="100%"
          version="1.1" shape-rendering="geometricPrecision" text-rendering="geometricPrecision"
          image-rendering="optimizeQuality" fill-rule="evenodd" clip-rule="evenodd"
          viewBox="0 0 360 460">
@@ -269,8 +269,7 @@
             Search:&nbsp;
             <input id="search" type="text"/>
         </div>
-        <div id="list"
-             style="position:absolute;top:45px;left:0;width:360px;height:415px;overflow:auto;overflow-x:hidden;"></div>
+        <div id="list"></div>
         <div id="info">
             <div id="info_title">
                 <span></span>
